Updates from Overleaf

--- a/Referencia/ref.bib
+++ b/Referencia/ref.bib
@@ -89,16 +89,17 @@
   journal={Analog Applications Journal}
 }
 
-@book{book:{1192202},
+@book{book:1192202,
    title =     {Power electronics : converters, applications, and design},
    author =    {Ned Mohan; Tore M Undeland; William P Robbins},
-   publisher = {John Wiley & Sons},
+   publisher = {John Wiley \& Sons},
    isbn =      {0471226939,9780471226932,0471429082,9780471429081},
    year =      {2003},
    series =    {},
    edition =   {},
    volume =    {},
-   url =       {http://gen.lib.rus.ec/book/index.php?md5=ffb5fef55f9ecb00b2404f0074753acb}}
+   url =       {http://gen.lib.rus.ec/book/index.php?md5=ffb5fef55f9ecb00b2404f0074753acb}
+   }
    
    
    @article{alvarez2019caracterizacion,
@@ -108,6 +109,23 @@
   volume={23},
   pages={1--11},
   year={2019}
+}
+@article{atia2009photovoltaic,
+  title={Photovoltaic Maximum Power Point Tracking Using SEPIC Converter},
+  author={Atia, Yousry},
+  journal={ERJ. Engineering Research Journal},
+  volume={32},
+  number={4},
+  pages={437--445},
+  year={2009},
+  publisher={Menoufia University, Faculty of Engineering}
+}
+
+@article{falin2008designing,
+  title={Designing DC/DC converters based on SEPIC topology},
+  author={Falin, Jeff},
+  journal={Analog Applications Journal},
+  year={2008}
 }
 
 
@@ -122,6 +140,16 @@
   pages={89--98},
   year={2014}
 } %Que tipo de pruebas se le hace al regulador + INTRO 
+
+
+@mastersthesis{rios2017sistema,
+  title={Sistema de conversi{\'o}n Sepic para emulador de panel solar fotovolt{\'a}ico con algoritmo MPPT},
+  author={R{\'\i}os Rengifo, Horacio Alexander and S{\'a}nchez C{\'o}rdoba, Juan Sebasti{\'a}n and others},
+  type={{B.S.} thesis},
+  year={2017},
+  school={Universidad Aut{\'o}noma de Occidente}
+}
+
 
 
 
