--- a/Referencia/ref.bib
+++ b/Referencia/ref.bib
@@ -135,6 +135,15 @@
   year={2020}
 }
 
+@inproceedings{kaouane2015design,
+  title={Design of a synchronous sepic DC-DC converter for a stand-alone photovoltaic system},
+  author={Kaouane, M and Boukhelifa, A and Ch{\'e}riti, Ahmed},
+  booktitle={2015 IEEE 28th Canadian Conference on Electrical and Computer Engineering (CCECE)},
+  pages={870--874},
+  year={2015},
+  organization={IEEE}
+}
+
 
 %------------------------------------------MPPT-------------------------------------------------------
 
