--- a/main.tex
+++ b/main.tex
@@ -202,25 +202,11 @@
 
 \section{Conclusión}
 
-Trabajo a futuro. Diseño de convertidor multifase para mejorar la eficiencia. 
-Eficiencia obtenida? 
-Como se menicona en tal paper la eficiencia de este tipo podrìa ser mejorada, Ademas los componentes en modo boost sufren stress ... 
 
-Presenta una fácil implementación y
-aislamiento galvánico entre la entrada y la salida, y un menor rizado de corriente
-de entrada a altas frecuencias. Sin embargo, una mejora de este circuito puede
-ser obtenida acoplando los dos inductores vistos bajo un mismo núcleo, teniendo
-la posibilidad de aumentar la eficiencia en un 2 y reduciendo la emisión de ruido
-EMI, lo que conlleva a simplificar el filtro de entrada del convertidor.
+    Se diseñó un conversor Buck-Boost de topología SEPIC de alta eficiencia y bajo costo en comparación con las distintas topologías mencionadas. La fortaleza de este diseño es la facilidad con la que podrá realizarse el sistema de control MPPT y la integración e implementación del mismo. 
+    Este conversor presenta un aislamiento entre entrada y salida y un nivel de rizado de corriente  y tensión aceptable que puede ser mejorado si los bobinados son enrollados bajo un mismo núcleo. 
 
-.
-The
-two inductors can be wound on the same core since
-the same voltages are applied to them throughout the
-switching cycle. Using a coupled inductor takes up
-less space on the printed circuit board (PCB) and
-tends to be lower cost than two separate inductors.
- 
+    De los resultados se puede concluir que este conversor es apto para aplicaciones de energía renovable y carga de DC como banco de baterías.  Se propone como trabajo a futuro a mejorar el diseño cuidando las interferencias producidas por este tipo de conversores conmutados. 
 
 
 
