--- a/Ficheros/abstract.tex
+++ b/Ficheros/abstract.tex
@@ -6,10 +6,7 @@
 
 \end{abstract}
 \begin{resumen}
-    Acá va el resumen en español \\ 
-    Con varias lineas \\ 
-    para probar si anda \\ 
-    
+   Se presenta el diseño de un coversor DC-DC de bajo costo y alta simplicidad para su integración en controladores MPPT de sistemas de paneles solares para uso doméstico. 
 \end{resumen}
 
 \begin{IEEEkeywords}
