--- a/Ficheros/tit_aut.tex
+++ b/Ficheros/tit_aut.tex
@@ -1,7 +1,7 @@
 \pagestyle{fancy}
-\title{Diseño de conversor Buck-Boost para celdas fotovoltaicas con MPPT} 
+\title{Diseño de conversor Buck-Boost - SEPIC- para celdas fotovoltaicas con MPPT} 
 \author{
-\IEEEauthorblockN{ Matias Dogliani}
+\IEEEauthorblockN{ Matias Dogliani [72152@electronica.utn.frc.edu.ar]}
 \IEEEauthorblockA{\textit{Universidad Tecnológica Nacional, Departamento de Ingeniería Electrónica} \\
 \textit{Electrónica de Potencia} \\
 2020} \\
