--- a/main.tex
+++ b/main.tex
@@ -208,11 +208,13 @@
 
     De los resultados se puede concluir que este conversor es apto para aplicaciones de energía renovable y carga de DC como banco de baterías.  Se propone como trabajo a futuro a mejorar el diseño cuidando las interferencias producidas por este tipo de conversores conmutados. 
 
-
-
 \nocite{*}
 \bibliographystyle{plain}
 \bibliography{Referencia/ref.bib}
+
+\section*{Datos Biográficos}
+
+\small{ \textbf{Dogliani Matias}, Nacido en Ciudad de  Córdoba. Estudiante de Ingeniería Electrónica en la Universidad Tecnológica Nacional - Facultad Regional Córdoba, Argentina. Miembro estudiantil IEEE, PELS (\textit{Power Electronics Society} y RAS (\textit{Robotics and Automation}) . Sus intereses son, energías renovables, bio-electrónica, procesamiento de imágenes, diseño digital y sistemas embebidos - Correo: 72152@electronica.utn.frc.edu.ar}
 
 \end{document}
 
