--- a/Ficheros/conf_marco.tex
+++ b/Ficheros/conf_marco.tex
@@ -3,7 +3,7 @@
 
 \pagestyle{fancy}
 %\fancyfoot[L]{}
-\lfoot{\textsc{Universidad Tecnológica Nacional, Facultad Regional Córdoba - Argentina}}
+\lfoot{\textsc{UTN,FRC. Cátedra Electrónica de Potencia - Paper N$^{\circ}$} 9541-059/20}
 \cfoot{} % quitar número de página del centro
 \rfoot{\thepage} % número de página a la derecha
 \renewcommand{\headrulewidth}{0pt} % grosor de la línea de la cabecera
